@@ -1,5 +1,6 @@
 v6.4
 -----
+: Fixed a bug where tags would sometimes be hidden behind the price on DLC lists
 
 
 v6.3
